# bihelix-rgb-cli

./: Cargo.toml  README.md
demo/: run_generate_address.sh  run_import_rgb20_schemata.sh
src/: main.rs  opts.rs  utils.rs
src/cmds/: bihelix_wallet.rs  key.rs  mod.rs
