[workspace]
members = [
  ".",
]

[workspace.package]
version = "0.11.0-beta.8"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts"]
categories = ["cryptography::cryptocurrencies"]

authors = ["Jack Choi <cymqqqq@gmail.com>"]
homepage = "https://github.com/bihelix-io"
repository = "https://github.com/bihelix-io/bihelix-rgb-cli.git"
rust-version = "1.78" # Due to strict encoding library
edition = "2021"
license = "Apache-2.0"

[package]
name = "bihelix-rgb-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brgb"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { workspace = true }
amplify = { workspace = true }
strict_types = { workspace = true, features = ["serde"] }
commit_verify = { workspace = true }
bp-core = { workspace = true }
rgb-std = { workspace = true }
log = { workspace = true }
env_logger = "0.10.1"
clap = { version = "4.4.8", features = ["derive", "env"] }
shellexpand = "3.1.0"
serde_crate = { workspace = true }
serde_yaml = { workspace = true }
serde_json = "1.0.108"
toml = "0.8.8"
bitcoin = { workspace = true }
rgb-psbt = { workspace = true }
# bdk =   { workspace = true }
base64 = { workspace = true }
# dirs-next = "2.0.0"
rgb-schemata = { workspace = true }
rand = { workspace = true }
bp-seals ={ workspace = true }
rgb-interfaces = { workspace = true }
bihelix-std = { workspace = true }
bihelix-rgb = { workspace = true }
rocksdb = { workspace = true }
dw_psbt = { workspace = true }
rgb-core = { workspace = true }
rgb-runtime = { workspace = true }
bp-wallet = { workspace = true, features = ["fs"] }
descriptors = { workspace = true }
bp-std =  { workspace = true }
bp-electrum=  { workspace = true }

[workspace.dependencies]
bp-electrum = "0.11.0-beta.8"
bp-std = "0.11.0-beta.8"
descriptors = "0.11.0-beta.8"
dw_psbt = { git = "https://github.com/BP-WG/descriptor-wallet.git", package = "psbt", features = ["sign"]}
bp-wallet = {version ="0.11.0-beta.8", features = ["fs"]}

bihelix-std = { git = "https://github.com/bihelix-io/bihelix-std.git", branch = "kv-beta8"}
bihelix-rgb = { git = "https://github.com/bihelix-io/bihelix-rgb.git", branch = "intergration-test"}
rgb-core = "0.11.0-beta.8"
rgb-runtime = { version = "0.11.0-beta.8",  features = ["all"] }

rgb-schemata =  "0.11.0-beta.8"
base64 = "0.13.0"
# bdk = { version = "0.29", features = ["electrum", "keys-bip39"] }
anyhow = "1.0"
amplify = "4.7.0"
baid64 = "0.2.2"
bitcoin = "0.29.2"
commit_verify = { version = "0.11.0-beta.8", features = ["stl"] }
strict_encoding = "2.7.0-rc.1"
strict_types = "2.7.0-rc.1"

bp-core = "0.11.0-beta.8"
bp-seals = "0.11.0-beta.8"

rgb-std = { version = "0.11.0-beta.8" }
psbt = { version = "0.11.0-beta.8", features = ["client-side-validation"] }
rgb-interfaces = "0.11.0-beta.8"

rgb-psbt = { version = "0.11.0-beta.8" }
serde_crate = { package = "serde", version = "1", features = ["derive"] }
serde_yaml = "0.9.19"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
rand = "0.8.5"
rocksdb = "0.22.0"


# [profile.release]
# strip = "symbols"